first working code

--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ PW=password
 
 # specify filter variables to limit DICOM series MONAILabel will fetch
 # i.e. '{"Modality": "MR", "SeriesNumber": 42}'
-SEARCH_FILTER='{}'
+SEARCH_FILTER='{"Modality": "CT"}'
 
 # needs to be adjusted, used for (a) model files and (b) Orthanc's index files (that can not be stored on network mount)
 LOCAL_WORKSPACE=/path/to/local/workspace
@@ -16,5 +16,5 @@ LOCAL_WORKSPACE=/path/to/local/workspace
 # should point to a directory where Orthanc will store image files (network mount possible)
 IMAGE_MOUNT=/path/to/image/mount
 
-NGINX_LISTEN_PORT=80
-SERVER=http://${SERVICE_HOST}/orthanc/dicom-web
+# NGINX_LISTEN_PORT=8009
+SERVER=http://${SERVICE_HOST}:8042/dicom-web
