--- a/orthanc/Dockerfile
+++ b/orthanc/Dockerfile
@@ -1,6 +1,3 @@
-FROM jodogne/orthanc:1.11.0
+FROM jodogne/orthanc-plugins:1.12.4
 
 WORKDIR /root/
-
-RUN wget http://lsb.orthanc-server.com/plugin-dicom-web/mainline/libOrthancDicomWeb.so
-RUN mv ./libOrthancDicomWeb.so /usr/local/share/orthanc/plugins/
